translation-tool/inputs/source_meta/objects/Order_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ExternalReferenceNumber__c</fullName>
        <description>This is a reference Number passed from an External system to Salesforce.</description>
        <label>ExternalReferenceNumber</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is Look up to Location Account.</inlineHelpText>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Transactions (Location Account)</relationshipLabel>
        <relationshipName>Order_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Origin of the Request

Below are the possible values for this field,
1.Web
2.Phone
3.IVR
4.OPS</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                    <default>true</default>
                    <label>Web</label>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>OPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_for_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Questionnaire for Offer</description>
        <label>Questionnaire for Offer</label>
        <referenceTo>Questionnaire_for_Offers__c</referenceTo>
        <relationshipLabel>Order Transactions</relationshipLabel>
        <relationshipName>Order_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Data__c</fullName>
        <label>Transaction Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Order Transaction</label>
    <nameField>
        <displayFormat>OT-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>